# Secure-Outreach

./: .gitignore  README.md  package-lock.json  package.json  vercel.json  vite.config.ts
Frontend Design/stitch/: manifest_kenya_prd.html
Frontend Design/stitch_secure_outreach-Admin Dashboard/: DESIGN.md  code.html
Frontend Design/stitch_secure_outreach-Authentication page 1/: code.html
Frontend Design/stitch_secure_outreach-Evangelist Dashboard/: code.html
Frontend Design/stitch_secure_outreach-Landing page/: code.html
Frontend Design/stitch_secure_outreach-Outreach Data Entry Page/: code.html
Frontend Design/stitch_secure_outreach-Pastor Dashboard/: code.html
api/: .env  compose.yaml  main.py  pyproject.toml
api/src/: config.py
api/src/db/: seed.py  setup.py
api/src/db/models/: contact.py  followup.py  session.py  team.py  user.py
api/src/db/repositories/: contact_repo.py  session_repo.py  team_repo.py  user_repo.py
api/src/db/routes/: auth.py  contacts.py  dashboard.py  followups.py  sessions.py  teams.py  users.py
api/src/schemas/: auth.py  contact.py  dashboard.py  followup.py  session.py  team.py
api/src/services/: auth_service.py  contacts_service.py  dashboard_service.py  followup_service.py  sessions_service.py  teams_service.py
attached_assets/: Pasted-Goal-Build-a-secure-outreach-app-for-volunteers-and-chu_1765997877180.txt
client/: README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
client/src/: App.tsx  index.css
server/: index.ts  routes.ts  storage.ts
shared/: schema.ts
(+34 files in other folders)
