[project]
name = "secure-outreach-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "advanced-alchemy[cli]>=1.8.2",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.115.0",
    "bcrypt>=4.0.0",
    "pydantic-settings>=2.5.0",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy>=2.0.35",
]
